# python-hack-vm-translator

./: .gitignore  README.md  pyproject.toml  test.vm
src/: code_writer.py  main.py  parser.py
